vim.config: Added ctags

--- a/vim.config
+++ b/vim.config
@@ -4,3 +4,5 @@
 * fugitive.vim
 * vim airline
 * CtrlP.vim (https://github.com/ctrlpvim/ctrlp.vim)
+* ctags (https://gist.github.com/nazgob/1570678 and
+         https://courses.cs.washington.edu/courses/cse451/10au/tutorials/tutorial_ctags.html)
