--- a/.muttrc
+++ b/.muttrc
@@ -7,6 +7,7 @@ set use_from = yes
 set envelope_from ="yes"
 # End copy from backup rc
 
+# Auth while sending. Check https://github.com/Homebrew/legacy-homebrew/issues/33419#issuecomment-60069502
 set smtp_authenticators = 'gssapi:login'
 
 # My credentials
