tmux: Move statusbar to top, add session name
Signed-off-by: Rudra Nil Basu <rudra.n.basu@gmail.com>

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,7 +20,7 @@ setw -g mode-fg colour1
 setw -g mode-bg colour18
 
 # statusbar
-set -g status-position bottom
+set -g status-position top
 set -g status-justify left
 set -g status-bg colour18
 set -g status-fg colour137
@@ -28,7 +28,7 @@ set -g status-attr dim
 set -g status-left ''
 set -g status-right '#[fg=colour233,bg=colour19,bold] %d/%m #[fg=colour233,bg=colour8,bold] %H:%M:%S '
 # set -g status-right '#[bold] %d/%m #[bold] %H:%M:%S '
-set -g status-right '#[bold]#(./correct_uptime.sh) #[bold] %d/%m #[bold] %H:%M:%S '
+set -g status-right '[#S] [uptime: #[bold]#(./correct_uptime.sh)] #[bold] %d/%m #[bold] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
